# GraphRAG

./: .gitignore  00_Intro_and_Config.py  01_Data_Prep.py  02_Build_Knowledge_Graph.py  03_Build_Agent.py  04_Query_Demo.py  05_Evaluation.py  README.md  RUNME.py  databricks.yml  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.cursor/agents/: builder.md  data-specialist.md  developer-specialist.md  evaluator.md  extraction-specialist.md  quality-learning-specialist.md  verifier.md
.cursor/rules/: gsd-execution.mdc
.planning/: PRFAQ.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  SUBAGENT-COORDINATION.md  SYSTEM.md  config.json
.planning/decisions/: D-001-delta-over-neo4j.md  D-002-bible-corpus.md  D-003-dash-framework.md  D-004-debug-notebook-workflow.md  README.md
.planning/templates/: CONTRIBUTION-GATE-TEMPLATE.md  DECISION-TEMPLATE.md  RETROSPECTIVE-TEMPLATE.md
deploy/: pipeline_job.yml  webapp.yml
graphrag/: __init__.py  config.py
graphrag/graph/: __init__.py  schema.py  sync.py
graphrag/ingest/: __init__.py  models.py  parser.py  pipeline.py
graphrag/query/: __init__.py  chain.py  prompts.py
notebooks/: 00_Intro_and_Config.py  01_Data_Prep.py  02_Build_Knowledge_Graph.py  03_Build_Agent.py  04_Query_Demo.py  05_Evaluation.py
notebooks/spikes/: 02_Interactive_Debug.py  05_Interactive_Debug.py
src/: config.py
src/agent/: agent.py  agent_serving.py  tools.py
src/app/: app.py  app.yaml  requirements.txt
src/evaluation/: evaluation.py  (+1 more)
tests/: test_demo_app.py
util/: agent.py  config.py  extraction.py  flat_rag.py
(+33 files in other folders)
