[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphrag"
version = "0.1.0"
description = "Graph-powered RAG for codebase understanding on Databricks"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "neo4j>=5.0",
    "langchain>=0.3",
    "langchain-neo4j>=0.2",
    "langchain-community>=0.3",
    "langchain-databricks>=0.1",
    "databricks-sdk>=0.30",
    "mlflow>=2.15",
    "pydantic>=2.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5",
    "delta-spark>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
