[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphrag-solution-accelerator"
version = "0.1.0"
description = "GraphRAG: Graph-powered RAG on Databricks — Bible Knowledge Graph Demo"
requires-python = ">=3.11"
dependencies = [
    "databricks-langchain",
    "langgraph>=0.3.4",
    "mlflow>=3.0",
    "databricks-agents",
    "databricks-sdk>=0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
]
